index page updated

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	<!--[if lte IE 9]>
     	<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
     <![endif]-->
-
+    
+    <a href="#" class="menubar"><i class="fas fa-bars"></i></a>
     <!-- header-top-area-start -->
     <section class="header-top-area">
     	<div class="container">
@@ -44,13 +45,26 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <a href="#" class="menubar"><i class="fas fa-bars"></i></a>
                     <ul class="mobile-menu-view">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Register</a></li>
                         <li><a href="#">Dawnload</a></li>
                         <li><a href="#">Live Chat</a></li>
                     </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="mobile-login-form">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <form action="#">
+                        <input type="name" placeholder="USERNAME">
+                        <input type="pass" placeholder="PASSWORD">
+                        <a href="#" class="submit-btn">Login</a>
+                        <a href="#" class="dafter-btn">Dafter</a>
+                    </form>
                 </div>
             </div>
         </div>
