index page updated

--- a/index.html
+++ b/index.html
@@ -167,6 +167,15 @@
     		</div>
     	</div>
     </section>
+    <section class="mobile-game text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <img src="assets/img/games.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- footer-area-start -->
     <section class="footer-area">
     	<div class="container">
